[workspace]
members = [
    "binary_trees",
    "caesar_ciphers",
    "cli_salad",
    "copilot_ecosystem_module",
    "csv_reader",
    "homophonic_ciphers",
    "parsing_csvs",
    "plotting_distances",
    "working_with_btree_sets",
    "working_with_linked_lists",
    "working_with_vecdeques",
    "working_with_vectors",
]

[workspace.dependencies]
clap = "4.5.10"
rand = "0.8.5"
rasciigraph = "0.2.0"
csv = "1.3.0"

[package]
name = "rfde"     # Rust For Data Engineering.
version = "0.1.0"
edition = "2021"

[dependencies]
rasciigraph = { version = "0.2.0", workspace = true }
rand = { version = "0.8.5", workspace = true }
clap = { version = "4.5.10", features = ["derive"], workspace = true }
csv = { version = "1.3.0", workspace = true }
